==============================================================
1.0.1 [2022/01/31]
==============================================================
 - removed field prefix (mamba/goffy)
 - removed table name from functions (mamba/goffy)
 - usage of singular table names (mamba/goffy)
 - updated mail notification system (goffy)
 - added verification for registrations (goffy)
 - added js in account form (goffy)
 - modification of textblock usage (goffy)

==============================================================
1.0.0 [2022/01/04 9:28:23]
==============================================================
 - Original release wgevents (Goffy - Wedega)