@@ -8,6 +8,7 @@
  - added verification for registrations (goffy)
  - added js in account form (goffy)
  - modification of textblock usage (goffy)
+ - added tablesorter (mamba)
 
 ==============================================================
 1.0.0 [2022/01/04 9:28:23]
